--- a/Szablony/style3.css
+++ b/Szablony/style3.css
@@ -22,8 +22,7 @@ margin-top:10px;
 {
 width:170px;
 float: left;
-background: rgb(50,213,177);
-background: linear-gradient(90deg, rgba(50,213,177,1) 0%, rgba(9,120,121,1) 51%, rgba(0,155,255,1) 100%);
+background-color:#7617E2;
 height:500px;
 }
 #main
@@ -36,8 +35,7 @@ height:500px;
 #right{
 width:170px;
 float: left;
-background: rgb(50,213,177);
-background: linear-gradient(90deg, rgba(50,213,177,1) 0%, rgba(9,120,121,1) 51%, rgba(0,155,255,1) 100%);
+background-color:#7617E2;
 height:500px;
 }
 	
