--- a/Szablony/style3.css
+++ b/Szablony/style3.css
@@ -22,7 +22,7 @@ margin-top:10px;
 {
 width:170px;
 float: left;
-background-color:#7617E2;
+background-color:#C2A6E2;
 height:500px;
 }
 #main
@@ -35,7 +35,7 @@ height:500px;
 #right{
 width:170px;
 float: left;
-background-color:#7617E2;
+background-color:#C2A6E2;
 height:500px;
 }
 	
