--- a/Szablony/style3.css
+++ b/Szablony/style3.css
@@ -65,5 +65,7 @@ font-size: 30 px;
 width: auto ;
 height: 85 px;
 clear: both;
+background: rgb(238,188,241);
+background: linear-gradient(90deg, rgba(238,188,241,1) 0%, rgba(158,48,172,1) 51%, rgba(124,2,136,1) 100%);
 )
 	
